<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textAlignment="textEnd"
        android:textColor="#009688"
        android:textSize="36sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="52sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/clearButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/clearButton"
                android:textSize="24sp" />

            <Button
                android:id="@+id/memoryButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/memoryButton"
                android:textSize="24sp" />

            <Button
                android:id="@+id/memoryRemove"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/memoryRemove"
                android:textSize="24sp" />

            <Button
                android:id="@+id/memoryAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/memoryAdd"
                android:onClick="onButtonClick"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/_7Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_7Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/_8Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_8Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/_9Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_9Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divideButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/divideButton"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="100dp">

            <Button
                android:id="@+id/_4Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_4Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/_5Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_5Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/_6Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_6Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/multiplyButton"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="100dp">

            <Button
                android:id="@+id/_1Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_1Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/_2Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_2Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/_3Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_3Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/minusButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/minusButton"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="100dp">

            <Button
                android:id="@+id/_.Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_.Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/_0Button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/_0Button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/addButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/addButton"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/equalButton"
                android:textColor="#009688"
                android:textSize="30sp" />

        </TableRow>
    </TableLayout>

</LinearLayout>